--- a/README.adoc
+++ b/README.adoc
@@ -44,6 +44,16 @@ antora:
 * <2> List of dependencies to be downloaded and extracted. The directory where these dependencies are extracted will be available to all components as an environment variable.
 * <3> The name of the environment variable describing where the path can be found. If this path exists and is a valid directory, it will be used as the source root for the dependency, skipping the download and extraction steps. If this is different from `variable`, the extension will set the value of `variable` to the path where the dependency is already located.
 
+Besides the `dependencies` configuration, you can also set the following options:
+
+|===
+| Option | Description | Default
+
+| `version` | A semver range that specifies the version of MrDocs to use. | `*`
+| `allow-master` | If `true`, the extension will allow the use of the `master` branch for MrDocs if `version` is `*`. | `true`
+| `allow-develop` | If `true`, the extension will allow the use of the `develop` branch for MrDocs if `version` is `*`. | `true`
+|===
+
 === Components
 
 Components that will include reference documentation should set the path of the MrDocs configuration file. Append following in your `antora.yaml`:
